Add .gitignore and remove large model file
The SmolLM2-135M-Instruct-Q4_K_M.gguf model (100MB) exceeds
GitHub's file size limit. The model should be downloaded
separately from HuggingFace.

For production deployment:
- Render: Model downloads automatically from HuggingFace
- Local: Download from HuggingFace Hub

To download the model:
huggingface-cli download bartowski/SmolLM2-135M-Instruct-GGUF \
  --include SmolLM2-135M-Instruct-Q4_K_M.gguf \
  --local-dir model/

Added .gitignore for:
- Python cache and build files
- IDE configurations
- Environment files
- Large model files

Generated: 2026-01-01

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
-__pycache__
-.venv
-wasix-site-packages
+# Large model files
+model/*.gguf
+model/*.safetensors
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+*.egg-info/
+dist/
+build/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Environment
+.env
+.env.local
